fixed text overlap on mobile in input window

--- a/react-frontend/src/search.css
+++ b/react-frontend/src/search.css
@@ -40,7 +40,6 @@ form > label > input {
   border: 1px dashed black;
   padding: 5px;
   height: 10px;
-  font-size: 20px;
   font-weight: 100;
 }
 
